--- a/style.css
+++ b/style.css
@@ -3,16 +3,22 @@ body {
   background: -moz-linear-gradient(top, #33FFDD 0%, #FFFFFF 100%);
   background: -webkit-linear-gradient(top, #33FFDD 0%, #FFFFFF 100%);
   background: linear-gradient(to bottom, #33FFDD 0%, #FFFFFF 100%);
+  background: fixed;
+  
+}
+
+div { 
+  background: fixed;
 }
 
 h1 {
-  font-family: ariel;
+  font-family: helvetica;
   text size: 18px;
   color: white;
 }
 
 p {
-  font-family: ariel, serif;
+  font-family: helvetica, serif;
   text size: 12px;
   color: white;
 }
