--- a/style.css
+++ b/style.css
@@ -3,12 +3,7 @@ body {
   background: -moz-linear-gradient(top, #33FFDD 0%, #FFFFFF 100%);
   background: -webkit-linear-gradient(top, #33FFDD 0%, #FFFFFF 100%);
   background: linear-gradient(to bottom, #33FFDD 0%, #FFFFFF 100%);
-  background: fixed;
-  
-}
-
-div { 
-  background: fixed;
+  background-attachment: fixed;
 }
 
 h1 {
