--- a/style.css
+++ b/style.css
@@ -7,13 +7,13 @@ body {
 }
 
 h1 {
-  font-family: helvetica;
+  font-family: Helvetica;
   text size: 18px;
   color: white;
 }
 
 p {
-  font-family: helvetica, serif;
+  font-family: Helvetica, serif;
   text size: 12px;
   color: white;
 }
