--- a/style.css
+++ b/style.css
@@ -7,13 +7,27 @@ body {
 }
 
 h1 {
-  font-family: Helvetica, Arial;
-  text size: 12px;
-  color: white;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 12px;
+  letter-spacing: 4px;
+  word-spacing: 2px;
+  color: #FFFFFF;
+  font-weight: 400;
+  text-decoration: none;
+  font-style: normal;
+  font-variant: normal;
+  text-transform: none;
 }
 
 p {
-  font-family: Helvetica, Arial, serif;
-  text size: 10px;
-  color: white;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 10px;
+  letter-spacing: 4px;
+  word-spacing: 2px;
+  color: #FFFFFF;
+  font-weight: 400;
+  text-decoration: none;
+  font-style: normal;
+  font-variant: normal;
+  text-transform: lowercase;
 }
