--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 h1 {
-  font-family: "Courier New", Courier, monospace;
+  font-family: Helvetica, Courier, monospace;
   font-size: 12px;
   letter-spacing: 4px;
   word-spacing: 2px;
@@ -20,7 +20,7 @@ h1 {
 }
 
 p {
-  font-family: "Courier New", Courier, monospace;
+  font-family: Helvetica, Courier, monospace;
   font-size: 10px;
   letter-spacing: 4px;
   word-spacing: 2px;
