--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ p {
   font-family: Helvetica, Courier, monospace;
   font-size: 13px;
   letter-spacing: 1px;
+  line-height: 200%;
   word-spacing: 2px;
   color: #FFFFFF;
   font-weight: 400;
