--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+  cursor: zoom-in;
   background: #33FFDD;
   background: -moz-linear-gradient(top, #33FFDD 0%, #FFFFFF 100%);
   background: -webkit-linear-gradient(top, #33FFDD 0%, #FFFFFF 100%);
